--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
         </div>
     </section>
 
-    <section></section>
+    <section class="develop">
+
+        <div class="developImg">
+            <img class="img1" src="images/pictures/coding.png" alt="">
+            <img class="img2" src="images/shapes/shape-1.png" alt="">
+            <img src="images/shapes/" alt="">
+        </div>
+        <div class="developTxt">
+            <h3 class="poppins-font sectionSubheading">
+                Develop <br> Without Limits
+            </h3>
+            <p class="paragraphs">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.
+            </p>
+            <button>Read the Documentation</button>
+        </div>
+    </section>
     
 
 
